<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <item
        android:id="@+id/navigation_home"
        android:icon="@mipmap/huidr_sel"
        android:title="@string/title_home" />

    <item
        android:id="@+id/navigation_anti"
        android:icon="@mipmap/anti_sel"
        android:title="@string/title_dashboard" />

    <item
        android:id="@+id/navigation_doctor"
        android:icon="@mipmap/doctor_sel"
        android:title="@string/title_notifications" />

    <item
        android:id="@+id/navigation_follow"
        android:icon="@mipmap/follow_sel"
        android:title="@string/title_follow" />

    <item
        android:id="@+id/navigation_setting"
        android:icon="@mipmap/mine_sel"
        android:title="@string/title_setting" />


</menu>