<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.appkotlin.activity.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_anti"
        android:name="com.example.appkotlin.activity.ui.anti.AntiFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_doctor"
        android:name="com.example.appkotlin.activity.ui.doctorhall.DoctorHallFragment"
        android:label="@string/title_notifications"
        tools:layout="@layout/fragment_notifications" />
    <fragment
        android:id="@+id/navigation_follow"
        android:name="com.example.appkotlin.activity.ui.follow.FollowUpFragment"
        android:label="@string/title_follow"
        tools:layout="@layout/fragment_follow_up" />
    <fragment
        android:id="@+id/navigation_setting"
        android:name="com.example.appkotlin.activity.ui.setting.SettingFragment"
        android:label="@string/title_setting"
        tools:layout="@layout/fragment_setting" />


</navigation>